# mcp-search-searxng

./: README.md  pyproject.toml
.github/workflows/: linter.yml
src/mcp_search_searxng/: __init__.py  server.py
